# conversational-ai-qa-framework

./: .env.example  .gitignore  README.md  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: ci.yml
docs/: ci-example.md  monitoring-metrics.md  regression-checklist.md  test-scenarios.md  test-strategy.md
examples/customer-support-chatbot/: README.md  run_demo.ps1
reports/: junit.xml  report.md
src/caqf/: __init__.py  __main__.py  cli.py  config.py  pytest_integration.py
src/caqf/data/: __init__.py  matrix_loader.py  models.py
src/caqf/reporting/: __init__.py  junit_report.py  markdown_report.py
src/caqf/rules/: __init__.py  matchers.py  types.py  validators.py
src/caqf/runner/: __init__.py  execution_result.py  test_runner.py
templates/: bug-report-template.md  test-case-matrix.xlsx
tests/: __init__.py  conftest.py  test_cli.py  test_e2e_from_excel.py  test_matrix_loader.py  test_reporting.py  test_rules_engine.py  test_smoke.py  test_test_runner.py
